# bitdiff

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
configured_files/: CMakeLists.txt  config.hpp.in
include/bitdiff/: bitdiff.hpp  dataout.hpp  reader.hpp  version.hpp
src/: CMakeLists.txt  bitdiff.cpp  dataout.cpp  main.cpp  reader.cpp  version.cpp
